[gd_scene load_steps=2 format=3 uid="uid://b0gm6lcy78wvg"]

[ext_resource type="Script" path="res://scenes/ui/pause_menu.gd" id="1_rpoy5"]

[node name="PauseMenu" type="CanvasLayer"]
process_mode = 3
layer = 50
script = ExtResource("1_rpoy5")

[node name="Panel" type="Panel" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -60.0
offset_top = -60.5
offset_right = 60.0
offset_bottom = 60.5
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Panel"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -48.0
offset_top = -33.0
offset_right = 48.0
offset_bottom = 33.0
grow_horizontal = 2
grow_vertical = 2

[node name="ResumeButton" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Resume
"

[node name="RetryButton" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Retry"

[node name="MainMenuButton" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Main Menu"

[connection signal="pressed" from="Panel/VBoxContainer/RetryButton" to="." method="_on_retry_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/MainMenuButton" to="." method="_on_main_menu_pressed"]
